tests/neg-custom-args/captures/unscoped-classifier.check
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/unscoped-classifier.scala:5:8 --------------------------
5 |class A(a: Async) extends caps.Unscoped // error but msg could be better
  |        ^
  |        Reference `A.this.a` is not included in the allowed capture set {any} of the self type of class A.
  |
  |        where:    any is a root capability classified as Unscoped in the type of class A
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/unscoped-classifier.scala:10:8 -------------------------
10 |class C(f: () => Unit) extends caps.Unscoped // error but msg could be better
   |        ^
   |        Reference `C.this.f` is not included in the allowed capture set {any} of the self type of class C.
   |
   |        where:    any is a root capability classified as Unscoped in the type of class C
-- Error: tests/neg-custom-args/captures/unscoped-classifier.scala:17:15 -----------------------------------------------
17 |    def gg() = g()     // error but msg could be better
   |               ^
   |               Read-only method gg accesses exclusive capability `g`;
   |               method gg should be declared an update method to allow this.
